--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "stackblur-canvas": "^2.5.0",
+    "vintagejs": "^2.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
